- Convert video from mp4 to webm

--- a/projects/ngx-video-scrolling/src/lib/ngx-video-scrolling.component.html
+++ b/projects/ngx-video-scrolling/src/lib/ngx-video-scrolling.component.html
@@ -1,8 +1,7 @@
 <div ckass="height-filler" #setHeight>
   <div class="sticky-video-container">
     <video #videoElement autobuffer preload>
-      <source type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"'
-        [src]="videoSource">
+      <source [src]="videoSource">
     </video>
   </div>
 </div>
