--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
 </div>
 
 <div class="video-scrolling-container">
-  <ngx-video-scrolling [videoSource]="'/assets/chrome-video.mp4'"
+  <ngx-video-scrolling [videoSource]="'/assets/chrome-video.webm'"
     [frameDivider]="500">
   </ngx-video-scrolling>
 </div>
