--- a/projects/ngx-video-scrolling/src/lib/ngx-video-scrolling.component.less
+++ b/projects/ngx-video-scrolling/src/lib/ngx-video-scrolling.component.less
@@ -1,22 +1,37 @@
 .height-filler {
   position: relative;
-}
 
-.sticky-video-container {
-  height: 100vh;
-  width: 100%;
-  left: 0;
-  top: 0;
-  overflow: hidden;
-  position: sticky;
-}
+  .sticky-video-container {
+    height: 100vh;
+    width: 100%;
+    left: 0;
+    top: 0;
+    overflow: hidden;
+    position: sticky;
 
-video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  outline: none;
-  object-fit: cover;
+    video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      outline: none;
+      object-fit: cover;
+    }
+  }
+
+  .tooltip {
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px 40px;
+    border-radius: 5px;
+
+    &.left {
+      left: 100px;
+    }
+
+    &.right {
+      right: 100px;
+    }
+  }
 }
