--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,7 +40,7 @@
 
 <div class="video-scrolling-container">
   <ngx-video-scrolling [videoSource]="'/assets/chrome-video.webm'"
-    [frameDivider]="500">
+    [frameDivider]="500" [tooltips]="tooltips">
   </ngx-video-scrolling>
 </div>
 
